--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
 	<artifactId>swt2spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
-		<dependency> <groupId>org.springframework</groupId> <artifactId>spring-core</artifactId> <version>3.2.0.RELEASE</version> </dependency>
-		<dependency> <groupId>org.springframework</groupId> <artifactId>spring-context</artifactId> <version>3.2.0.RELEASE</version> </dependency>
-		<dependency> <groupId>org.eclipse.swt.gtk.linux</groupId> <artifactId>x86_64</artifactId> <version>3.3.0-v3346</version> </dependency>
+<dependency> <groupId>org.springframework</groupId> <artifactId>spring-core</artifactId> <version>3.2.0.RELEASE</version> </dependency>
+<dependency> <groupId>org.springframework</groupId> <artifactId>spring-context</artifactId> <version>3.2.0.RELEASE</version> </dependency>
+<dependency> <groupId>org.eclipse.swt.gtk.linux</groupId> <artifactId>x86_64</artifactId> <version>3.3.0-v3346</version> </dependency>
+<!-- 
+<dependency><groupId>swt</groupId><artifactId>swt-linux-gtk</artifactId><version>3.0.1</version></dependency>
+<dependency><groupId>org.eclipse</groupId><artifactId>swt</artifactId><version>3.3.0-v3346</version></dependency>
+-->
 	</dependencies>
 </project>
